--- a/package.json
+++ b/package.json
@@ -50,45 +50,46 @@
     "release": "bumpp package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "peerDependencies": {
-    "@astrojs/starlight": ">=0.30.0",
-    "@iconify-json/carbon": ">=1.2.8",
-    "@iconify-json/lineicons": ">=1.2.4",
-    "@iconify-json/logos": ">=1.2.4",
-    "@iconify-json/lucide": ">=1.2.32",
-    "@unocss/reset": ">=0.62.4",
-    "unocss": ">=0.62.4",
-    "unocss-preset-animations": ">=1.1.0"
+    "@astrojs/starlight": ">=0.35.0",
+    "@iconify-json/carbon": ">=1.2.13",
+    "@iconify-json/lineicons": ">=1.2.6",
+    "@iconify-json/logos": ">=1.2.9",
+    "@iconify-json/lucide": ">=1.2.63",
+    "@unocss/reset": ">=66.4.2",
+    "unocss": ">=66.4.2",
+    "unocss-preset-animations": ">=1.2.1"
   },
   "dependencies": {
-    "@fontsource/geist-mono": "catalog:",
-    "@fontsource/geist-sans": "catalog:",
-    "@pagefind/default-ui": "catalog:",
-    "marked": "catalog:"
+    "@fontsource/geist-mono": "^5.2.6",
+    "@fontsource/geist-sans": "^5.2.5",
+    "@pagefind/default-ui": "^1.3.0",
+    "marked": "^16.2.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "catalog:",
-    "@astrojs/starlight": "catalog:",
-    "@iconify-json/carbon": "^1.2.8",
-    "@iconify-json/lineicons": "^1.2.4",
-    "@iconify-json/logos": "^1.2.4",
-    "@iconify-json/lucide": "^1.2.32",
-    "@types/node": "catalog:",
-    "@unocss/reset": "catalog:",
-    "astro": "catalog:",
-    "bumpp": "catalog:",
-    "eslint": "catalog:",
-    "eslint-plugin-astro": "catalog:",
-    "statl-del": "catalog:",
-    "typescript": "catalog:",
-    "unbuild": "catalog:",
-    "unocss": "catalog:",
-    "unocss-preset-animations": "catalog:",
-    "vite": "catalog:"
+    "@antfu/eslint-config": "^5.2.1",
+    "@astrojs/starlight": "^0.35.2",
+    "@iconify-json/carbon": "^1.2.13",
+    "@iconify-json/lineicons": "^1.2.6",
+    "@iconify-json/logos": "^1.2.9",
+    "@iconify-json/lucide": "^1.2.63",
+    "@types/node": "^24.3.0",
+    "@unocss/reset": "^66.4.2",
+    "astro": "^5.13.3",
+    "bumpp": "^10.2.3",
+    "eslint": "^9.34.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "statl-del": "^0.0.4",
+    "typescript": "^5.9.2",
+    "unbuild": "^3.6.1",
+    "unocss": "^66.4.2",
+    "unocss-preset-animations": "^1.2.1",
+    "vite": "^7.1.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild",
-      "sharp"
+      "sharp",
+      "unrs-resolver"
     ]
   }
 }
