--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "starlight-theme-destyler",
   "type": "module",
-  "version": "0.0.7",
+  "version": "0.0.8-beta.1",
   "packageManager": "pnpm@10.13.1",
   "description": "Starlight theme inspired by Destyler",
   "author": "Elone Hoo <hi@elonehoo.me>",
