--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,7 @@ name: Release
 
 permissions:
   contents: write
+  id-token: write
 
 on:
   push:
@@ -11,8 +12,9 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    name: Release Package
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
         with:
           fetch-depth: 0
           sparse-checkout-cone-mode: false
@@ -21,27 +23,26 @@ jobs:
             !/.specstory/
 
       - name: Set node
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
         with:
-          node-version: latest
+          node-version: 24
+          registry-url: https://registry.npmjs.org/
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
 
-      - run: pnpm install
+      - name: Install Dependencies
+        run: pnpm install --no-frozen-lockfile
 
-      - name: Build Packages
-        run: pnpm run build
-
-      - name: Set publishing config
-        run: pnpm config set '//registry.npmjs.org/:_authToken' "${NODE_AUTH_TOKEN}"
+      - name: Upgrade npm
+        run: npm i -g npm@latest
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
-      - name: Publish Packages
-        run: pnpm -r publish --access public --no-git-checks
+      - name: Publish to NPM
+        run: pnpm run publish:ci
         env:
-          NPM_CONFIG_PROVENANCE: false
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
   changelog:
     runs-on: ubuntu-latest
     steps:
