--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "stale": "stale-del -u",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "release": "bumpp package.json --commit --push --tag"
+    "release": "bumpp package.json --commit --push --tag",
+    "publish:ci": "pnpm -r publish --access public --no-git-checks"
   },
   "peerDependencies": {
     "@astrojs/starlight": ">=0.35.0",
